add_user_module: add api and application
