# api/proto/user/v1/user.swagger.json
@@ -19,6 +19,7 @@
     "/user/api/v1/user": {
       "post": {
         "summary": "Create User.",
+        "description": "```\nExample request:\n   name: 'Artem'\n   email: 'email@mail.com'\n   password: 'password'\n```\n\n```\nExample response:\n   id: 1\n   name: 'Artem'\n   email: 'email@mail.com'\n   password: 'password'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.AlreadyExists",
         "operationId": "UserAPI_CreateUser",
         "responses": {
           "200": {
@@ -41,6 +42,166 @@
             "required": true,
             "schema": {
               "$ref": "#/definitions/v1CreateUserRequest"
+            }
+          }
+        ],
+        "tags": [
+          "UserAPI"
+        ]
+      }
+    },
+    "/user/api/v1/user/{id}": {
+      "get": {
+        "summary": "Get User by ID.",
+        "description": "```\nExample request:\n   id: 1\n```\n\n```\nExample response:\n   id: 1\n   username: 'Artem'\n   email: 'email@mail.com'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "UserAPI_GetUserByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1GetUserByIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "UserAPI"
+        ]
+      },
+      "delete": {
+        "summary": "Delete User by ID.",
+        "description": "```\nExample request:\n   id: 1\n```\n\n```\nExample response:\n   id: 1\n   success: ok\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "UserAPI_DeleteUserByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1DeleteUserByIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          }
+        ],
+        "tags": [
+          "UserAPI"
+        ]
+      },
+      "put": {
+        "summary": "Update User by ID.",
+        "description": "```\nExample request:\n   name: 'Artem'\n   email: 'email@mail.com'\n```\n\n```\nExample response:\n   id: 1\n   name: 'Artem'\n   email: 'email@mail.com'\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "UserAPI_UpdateUserByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateUserByIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "name": {
+                  "type": "string"
+                },
+                "email": {
+                  "type": "string"
+                }
+              }
+            }
+          }
+        ],
+        "tags": [
+          "UserAPI"
+        ]
+      }
+    },
+    "/user/api/v1/user/{id}/password": {
+      "put": {
+        "summary": "Update User Password by ID.",
+        "description": "```\nExample request:\n   id: 1\n   oldPassword: 'qwert123'\n   newPassword: '321trewq'\n```\n\n```\nExample response:\n   success: ok\n```\n\nSpecific codes:\n   * codes.InvalidArgument\n   * codes.NotFound",
+        "operationId": "UserAPI_UpdateUserPasswordByID",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/v1UpdateUserPasswordByIDResponse"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response.",
+            "schema": {
+              "$ref": "#/definitions/rpcStatus"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string",
+            "format": "int64"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "oldPassword": {
+                  "type": "string"
+                },
+                "newPassword": {
+                  "type": "string"
+                }
+              }
             }
           }
         ],
@@ -81,7 +242,7 @@
     "v1CreateUserRequest": {
       "type": "object",
       "properties": {
-        "username": {
+        "name": {
           "type": "string"
         },
         "email": {
@@ -96,9 +257,55 @@
       "type": "object",
       "properties": {
         "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        },
+        "password": {
           "type": "string"
         }
       }
+    },
+    "v1DeleteUserByIDResponse": {
+      "type": "object"
+    },
+    "v1GetUserByIDResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        }
+      }
+    },
+    "v1UpdateUserByIDResponse": {
+      "type": "object",
+      "properties": {
+        "id": {
+          "type": "string",
+          "format": "int64"
+        },
+        "name": {
+          "type": "string"
+        },
+        "email": {
+          "type": "string"
+        }
+      }
+    },
+    "v1UpdateUserPasswordByIDResponse": {
+      "type": "object"
     }
   }
 }
